src/main/java/com/revolvingmadness/testing/language/errors/NameError.java
package com.revolvingmadness.testing.language.errors;

public class NameError extends Error {
    public NameError(String message) {
        super(message);
    }
}
